<resources>
    <string name="app_name">Crime Report App</string>

    <string name="title_activity_maps">Maps</string>
    <string name="satellite">Satellite</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="name">Firstname</string>
    <string name="start">Start</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="need_an_account_register">Need an account? Register</string>
    <string name="signup">Signup</string>
    <string name="rx">Rx</string>
    <string name="google_api">AIzaSyAiP8S1tnPet7aSy7m9QLbeZ2aiA-7MmYI</string>
    <string name="phone">Phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_link">Send Link</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="settings">Settings</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="others">Others</string>
    <string name="take">Take</string>
    <string name="about">About</string>
</resources>