<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/home">
            <menu>
                <item
                    android:id="@+id/homeFragment"
                    android:title="@string/home"
                    android:icon="@drawable/ic_email"/>
                <item
                    android:id="@+id/loginFragment"
                    android:title="@string/login"
                    android:icon="@drawable/ic_email"/>

                <item
                    android:id="@+id/registerFragment"
                    android:title="@string/register"
                    android:icon="@drawable/ic_email"/>
            </menu>
        </item>
        <item
            android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/logout"
                    android:title="@string/login"
                    android:icon="@drawable/ic_email"/>
            </menu>
        </item>

        <item
            android:title="@string/others"
            >
            <menu>
                <item
                    android:id="@+id/settingsFragment"
                    android:title="@string/settings"
                    android:icon="@drawable/ic_settings"/>
            </menu>
        </item>
    </group>
</menu>