<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.auth.LoginFragment">

    <TextView
        android:text="@string/login"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/teal_200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/email"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_email"
            android:drawableStart="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:text="@string/password"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:drawableStart="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_textview"
        android:text="@string/forgot_password"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/loginbtn"
        android:text="@string/login"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/text_register"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/need_an_account_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>